--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/MaulanaHM/TestJavan/issues"
   },
-  "homepage": "https://github.com/MaulanaHM/TestJavan#readme"
+  "homepage": "https://github.com/MaulanaHM/TestJavan#readme",
+  "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "path": "^0.12.7"
+  }
 }
